# AndroidTutorialGame

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/thwg/mygame/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  Camera.h  Game.cpp  Game.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  logging.h  main.cpp  stb_image.h
app/src/main/java/com/thwg/mygame/: MainActivity.kt
app/src/test/java/com/thwg/mygame/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
